Bug horizontal scroll

--- a/wp-content/plugins/bok/sass/main.scss
+++ b/wp-content/plugins/bok/sass/main.scss
@@ -171,7 +171,7 @@ p {
   }
 
   .navbar-header, .navbar-collapse {
-    margin: auto -5px auto -10px !important;
+    margin: auto 0px;
   }
 
   .navbar-nav {
